# wsmux

./: LICENSE  README.md  pyproject.toml
src/wsmux/: __init__.py  __main__.py  cli.py
